fix(web-app): fixed chat input going out of screen

--- a/web_app/src/components/pages/Home/Chat/ChatInput/chatInput.module.css
+++ b/web_app/src/components/pages/Home/Chat/ChatInput/chatInput.module.css
@@ -2,6 +2,11 @@
 	display: flex;
 	align-items: center;
 	padding: 1px 8px;
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	width: inherit;
+	background-color: var(--background);
 }
 
 .InputContainer {
