--- a/web_app/src/components/pages/Home/Chat/chat.module.css
+++ b/web_app/src/components/pages/Home/Chat/chat.module.css
@@ -17,6 +17,7 @@
 	overflow-y: scroll;
 	overflow-x: hidden;
 	padding: 8px 4px;
+	margin-bottom: 64px;
 	display: flex;
 	flex-direction: column;
 }
